# cli-tools

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-workspace.yaml  turbo.json
tools/go/: .gitkeep  CLAUDE.md
tools/python/: .gitkeep  CLAUDE.md
tools/rust/: .gitkeep  CLAUDE.md
tools/typescript/: .gitkeep  CLAUDE.md
turbo/generators/: config.ts
turbo/generators/templates/go/: .gitignore  .golangci.yml  README.md  go.mod  package.json
turbo/generators/templates/go/cmd/{{name}}/: main.go  main_test.go
turbo/generators/templates/python/: .gitignore  README.md  package.json  pyproject.toml
turbo/generators/templates/python/tests/: test_cli.py
turbo/generators/templates/python/{{name}}/: __init__.py  __main__.py  cli.py
turbo/generators/templates/rust/: .clippy.toml  .gitignore  Cargo.toml  README.md  package.json
turbo/generators/templates/rust/src/: main.rs
turbo/generators/templates/typescript/: .eslintignore  README.md  eslint.config.js  package.json  tsconfig.json
turbo/generators/templates/typescript/src/: cli.test.ts  cli.ts
